Fix logo padding issue.
Extra padding on the width meant the specifically calculated 10% width
was incorrect. Fixed by removing horizontal padding and setting vertical
padding to a relative value.

--- a/HomeStyles.css
+++ b/HomeStyles.css
@@ -365,6 +365,7 @@ html {
 .languageItem {
     width: 20%;
     float: left;
+    padding: 1% 0% 1% 0%;
 }
 
 .languageItem>img {
@@ -484,7 +485,7 @@ html {
 
     .languageItem {
         width: 10%;
-        padding: 5px;
+        padding: 1% 0% 1% 0%;
     }
 
     .contactBox {
